--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "bitandbang",
-  "version": "2.1.1",
-  "description": "A personal card for Tierney Cyren (@bitandbang)",
+  "name": "nhac-lly",
+  "version": "0.0.1",
+  "description": "A personal card for nhac-lly",
   "main": "/bin/card.js",
   "bin": {
-    "bitandbang": "./bin/card.js"
+    "nhac-lly": "./bin/card.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bnb/bitandbang.git"
   },
-  "homepage": "https://bnb.im",
   "scripts": {
     "prepublish": "npm run build",
     "build": "node build.js",
@@ -25,7 +24,7 @@
     "npx card",
     "business card"
   ],
-  "author": "Tierney Cyren <hello@bnb.im> (http://bnb.im)",
+  "author": "nhac--ly <nhac.lly@icloud.com>",
   "license": "MIT",
   "files": [
     "bin/card.js",
@@ -35,9 +34,6 @@
     "boxen": "^2.1.0",
     "chalk": "^2.4.1",
     "standard": "^12.0.1"
-  },
-  "bugs": {
-    "url": "https://github.com/bnb/bitandbang/issues"
   },
   "dependencies": {}
 }
